# forest

./: .gitignore  README.md  package.json
backend/: package.json
backend/src/: app.js  server.js  stateEngine.js
bootstrap/: real_hardware_patch.part00  real_hardware_patch.part01
docs/: ANIMATION_TEST_ASSET_SPEC.md  API_CONTRACT.md  C5_PACKAGE_CAPABILITY_SUPPLEMENT.md  FIELD_HARDWARE_CHECKLIST.md  HARDWARE_SOURCE_OF_TRUTH.md  ONSITE_HARDWARE_CHECKLIST.md  REAL_HARDWARE_HANDOFF_INDEX.md  S3_HARDWARE_FACTS.md
firmware_modules/common/: CMakeLists.txt  cloud_client.c  cloud_client.h  echoforest_protocol.c  echoforest_protocol.h  esp_http_transport.c  esp_http_transport.h  mock_cloud_transport.c  mock_cloud_transport.h
frontend/: index.html  package.json
hardware_reference/: README.md  s3_base_project_20260710.zip.b64.part00  s3_base_project_20260710.zip.b64.part00a  s3_base_project_20260710.zip.b64.part00b  s3_base_project_20260710.zip.b64.part01  s3_base_project_20260710.zip.b64.part01a  s3_base_project_20260710.zip.b64.part01b  s3_base_project_20260710.zip.b64.part02a  s3_base_project_20260710.zip.b64.part02b  s3_base_project_20260710.zip.b64.part02c  s3_base_project_20260710.zip.b64.part02d  s3_base_project_20260710.zip.b64.part03  s3_base_project_20260710.zip.b64.part04  s3_base_project_20260710.zip.b64.part05  s3_base_project_20260710.zip.b64.part05a  s3_base_project_20260710.zip.b64.part06  s3_base_project_20260710.zip.b64.part07
scripts/: decode_s3_reference.cmd
simulator/: device_simulator.js
tasks/: TASK_REAL_HARDWARE_INTEGRATION.md
(+26 files in other folders)
